--- a/index.html
+++ b/index.html
@@ -1,15 +1,263 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="css/default.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/common.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="css/default.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap"
+    rel="stylesheet">
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+  <script defer src="js/common.js"></script>
 </head>
+
 <body>
-    test
+  <main class="main">
+    <section class="section intro">
+      <svg class="intro-bg" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 426 1440 134">
+        <path
+          d="M0 476.465C72 471.052 216 449.359 360 449.401C504 449.444 576 478.085 720 476.678C864 475.272 936 445.523 1080 442.369C1224 439.215 1368 457.201 1440 460.909V560H0V476.465Z"
+          fill="white" fill-opacity="0.2">
+          <animate attributeName="d"
+            values="M0 476.465C72 471.052 216 449.359 360 449.401C504 449.444 576 478.085 720 476.678C864 475.272 936 445.523 1080 442.369C1224 439.215 1368 457.201 1440 460.909V560H0V476.465Z; M0 461.18C72 457.397 216 441.105 360 442.262C504 443.42 576 467.813 720 466.967C864 466.121 936 436.876 1080 438.033C1224 439.191 1368 465.81 1440 472.754V560H0V461.18Z; M0 476.465C72 471.052 216 449.359 360 449.401C504 449.444 576 478.085 720 476.678C864 475.272 936 445.523 1080 442.369C1224 439.215 1368 457.201 1440 460.909V560H0V476.465Z"
+            keyTimes="0; 0.5; 1" dur="10s" repeatCount="indefinite"></animate>
+        </path>
+        <path
+          d="M0 476.361C72 481.017 216 502.509 360 499.639C504 496.77 576 461.149 720 462.016C864 462.882 936 502.454 1080 503.97C1224 505.486 1368 476.47 1440 469.594V560H0V476.361Z"
+          fill="white" fill-opacity="0.4">
+          <animate attributeName="d"
+            values="M0 476.361C72 481.017 216 502.509 360 499.639C504 496.77 576 461.149 720 462.016C864 462.882 936 502.454 1080 503.97C1224 505.486 1368 476.47 1440 469.594V560H0V476.361Z; M0 436.268C72 441.09 216 462.358 360 460.382C504 458.405 576 421.878 720 426.385C864 430.891 936 481.017 1080 482.914C1224 484.812 1368 445.281 1440 435.872V560H0V436.268Z; M0 476.361C72 481.017 216 502.509 360 499.639C504 496.77 576 461.149 720 462.016C864 462.882 936 502.454 1080 503.97C1224 505.486 1368 476.47 1440 469.594V560H0V476.361Z"
+            keyTimes="0; 0.5; 1" dur="10s" repeatCount="indefinite"></animate>
+        </path>
+        <path
+          d="M0 543.053C72 536.112 216 511.175 360 508.351C504 505.526 576 532.481 720 528.93C864 525.379 936 484.625 1080 490.596C1224 496.568 1368 545.151 1440 558.789V560H0V543.053Z"
+          fill="white">
+          <animate attributeName="d"
+            values="M0 543.053C72 536.112 216 511.175 360 508.351C504 505.526 576 532.481 720 528.93C864 525.379 936 484.625 1080 490.596C1224 496.568 1368 545.151 1440 558.789V560H0V543.053Z; M0 498.662C72 499.168 216 503.974 360 501.191C504 498.409 576 482.726 720 484.75C864 486.774 936 513.459 1080 511.309C1224 509.159 1368 481.462 1440 474V560H0V498.662Z; M0 543.053C72 536.112 216 511.175 360 508.351C504 505.526 576 532.481 720 528.93C864 525.379 936 484.625 1080 490.596C1224 496.568 1368 545.151 1440 558.789V560H0V543.053Z"
+            keyTimes="0; 0.5; 1" dur="10s" repeatCount="indefinite"></animate>
+        </path>
+      </svg>
+      <div class="intro-stars">
+      </div>
+      <div class="intro-txt">
+        <h1 class="intro-hello">안녕하세요</h1>
+        <h2 class="intro-tit">경력 5년차 UI 개발자 원인정입니다.</h2>
+        <p class="intro-desc">재사용성이 높으며 깔끔한 코드를 작성하기 위해 노력합니다.<br>인터렉션 구현에 관심을 가지고 공부하고 있습니다.</p>
+      </div>
+    </section>
+
+    <section class="section strength">
+      <div class="inner">
+        <ul class="strength-list">
+          <li class="strength-item">
+            <lottie-player src="json/1321-html-5-code-language-outline-edited.json" background="transparent">
+            </lottie-player>
+            <p>웹표준, 웹접근성에 맞춰 작업하며 의미에 맞는 태그를 사용합니다. 또한 간결하고 모듈화된 코드를 지향합니다.</p>
+          </li>
+          <li class="strength-item">
+            <lottie-player src="json/981-consultation-outline-edited.json" background="transparent">
+            </lottie-player>
+            <p>기획자, 디자이너, 개발자와 함께 소통하며 프로젝트 완성을 위해 노력합니다.</p>
+          </li>
+          <li class="strength-item">
+            <lottie-player src="json/35-edit-outline-edited.json" background="transparent" class="icon-pencil">
+            </lottie-player>
+            <p>최신 트렌드를 놓치지 않기 위해 검색하고 공부하며, 부족한 부분을 채워나가고 있습니다.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="section experience">
+      <div class="inner">
+        <h2 class="section-tit">경력사항</h2>
+        <p class="section-desc">
+          경력 초기에는 에이전시에서 다양한 클라이언트를 만나며 구축 및 유지보수 경험을 쌓았습니다. 시간이 지나며 단순히 코드를 작성하기보다 유지보수가 용이한 작업에 관심을 가지게 되었습니다.<br>
+          최근에는 React, React Native 환경에서 UI 개발을 담당하였으며 자연스레 재사용성이 높은 컴포넌트를 고민하고 있습니다.<br>
+          또한 사용자 입장에서 생각하고 사람들과 의견을 나누기도 합니다.
+        </p>
+        <div class="boxes">
+          <div class="box">
+            <h3 class="box-tit">메이드인헤븐<small>2020년 06월 ~ 현재</small></h3>
+            <ul class="bullet-list">
+              <li class="bullet-item">HTML, CSS, JavaScript, jQuery, React, React Native를 활용한 클라이언트 웹/앱 화면 개발 및 유지 보수
+              </li>
+              <li class="bullet-item">기획자, 개발자, 디자이너와 JIRA 또는 Yona를 통해 협업</li>
+              <li class="bullet-item">프로모션 페이지 내 기획에 따른 인터렉션 구현</li>
+              <li class="bullet-item">Recharts 활용하여 chart 커스터마이징 작업</li>
+              <li class="bullet-item">Kendo UI를 사용하여 어드민 페이지 작업</li>
+              <li class="bullet-item">클라이언트에는 kt alpha, 부동산114, 한전KDN 등 포함</li>
+            </ul>
+          </div>
+          <div class="box">
+            <h3 class="box-tit">신나는플랫폼<small>2019년 11월 ~ 2020년 05월</small></h3>
+            <ul class="bullet-list">
+              <li class="bullet-item">웹스퀘어를 활용한 학사 행정 시스템 화면 구축</li>
+              <li class="bullet-item">유지 및 관리가 쉬운 코드 작성</li>
+              <li class="bullet-item">협업 및 클라이언트측 인수인계를 위한 퍼블리싱 가이드 문서 작성</li>
+              <li class="bullet-item">클라이언트에는 서울대, 유한대 등 포함</li>
+            </ul>
+          </div>
+          <div class="box">
+            <h3 class="box-tit">비롯<small>2019년 01월 ~ 2019년 09월</small>
+            </h3>
+            <ul class="bullet-list">
+              <li class="bullet-item">그누보드, 워드프레스를 사용하여 기업페이지 구축</li>
+              <li class="bullet-item">패럴랙스, animation.css를 활용한 스크롤 인터렉션 적용</li>
+              <li class="bullet-item">다양한 슬라이드 라이브러리를 활용하여 커스터마이징 작업</li>
+              <li class="bullet-item">클라이언트에는 브리오슈도레, 동양 EMS, 켈란, 닛코괌, 더 츠바키 타워, 다원교육 등 포함</li>
+            </ul>
+          </div>
+          <div class="box">
+            <h3 class="box-tit">위즈그룹<small>2017년 03월 ~ 2018년 10월</small></h3>
+            <ul class="bullet-list">
+              <li class="bullet-item">HTML, CSS, Less, JavaScript, jQuery를 주로 사용하는 클라이언트 웹사이트 화면 개발 및 유지 보수</li>
+              <li class="bullet-item">브라우저 간 호환성을 위해 다양한 브라우저 및 모바일 장치에서 테스트</li>
+              <li class="bullet-item">숨은그림 찾기, 퍼즐 맞추기 등의 간단한 게임 구현</li>
+              <li class="bullet-item">프로모션 디자인에 맞춰 인터렉션 구현</li>
+              <li class="bullet-item">클라이언트에는 서울우유, 에어부산, 에어서울, 사조그룹, 코트야드 메리어트 등 포함</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section project">
+      <div class="inner">
+        <h2 class="section-tit">최근 작업물</h2>
+        <ul class="project-list">
+          <li class="project-item">
+            <div class="project-img">
+              <img src="img/alphapay_01.png" alt="">
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M22.4,-29C28.3,-26.5,32,-19,34.9,-11.1C37.7,-3.2,39.8,5.2,37.8,12.5C35.7,19.8,29.6,26,22.6,29.9C15.6,33.8,7.8,35.5,0.5,34.8C-6.8,34.1,-13.7,31.2,-21.3,27.5C-28.9,23.8,-37.4,19.3,-41.5,12.2C-45.6,5,-45.4,-4.8,-42.2,-13.4C-39,-22,-32.8,-29.3,-25.3,-31.4C-17.8,-33.4,-8.9,-30.1,-0.3,-29.7C8.2,-29.2,16.4,-31.6,22.4,-29Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-right">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M18.5,-26.1C23.4,-21.9,26.4,-15.7,27.8,-9.5C29.2,-3.3,29,3,28.1,10.2C27.2,17.3,25.6,25.2,20.8,30.9C16,36.7,8,40.3,-0.5,40.9C-9,41.6,-18,39.4,-22.1,33.4C-26.2,27.5,-25.3,17.7,-28.3,9C-31.3,0.4,-38.3,-7.2,-38.8,-14.8C-39.3,-22.4,-33.3,-30,-25.8,-33.4C-18.2,-36.7,-9.1,-35.8,-1.2,-34.2C6.8,-32.6,13.6,-30.3,18.5,-26.1Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-bottom">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M23.7,-29.9C31.6,-26.9,39.4,-21.1,42.3,-13.5C45.2,-5.8,43.2,3.8,39.1,11.5C35,19.3,28.8,25.2,21.9,28.2C15.1,31.3,7.5,31.4,0.6,30.6C-6.4,29.9,-12.9,28.2,-20.4,25.4C-28,22.6,-36.8,18.7,-38.4,12.7C-40.1,6.7,-34.6,-1.4,-31,-9.4C-27.4,-17.3,-25.7,-25.2,-20.9,-29.2C-16,-33.1,-8,-33.1,-0.1,-33C7.9,-32.9,15.8,-32.8,23.7,-29.9Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+            </div>
+            <div class="project-txt">
+              <h3 class="project-tit">알파페이</h3>
+              <p class="project-desc">자체페이 시스템 도입을 위해 화면작업을 했습니다. KT알파쇼핑, 이니시스측과 협업하며 작업을 진행했습니다. 입력폼 요소는 flex 레이아웃을
+                적용하여 유동적으로 활용할 수 있도록
+                하였습니다. 퀵결제 시스템의 경우 마우스 드래그 및 터치 인터렉션을 구현하였습니다.</p>
+              <ul class="tech-list">
+                <li class="tech-item">jQuery</li>
+                <li class="tech-item">jQuery ui</li>
+              </ul>
+            </div>
+          </li>
+          <li class="project-item">
+            <div class="project-img">
+              <img src="img/caremon_01.png" alt="">
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M10.9,-15.3C15.3,-9.4,20.8,-7,23,-2.8C25.2,1.4,24.1,7.3,20.7,10.6C17.2,13.8,11.3,14.4,5.4,17.8C-0.5,21.2,-6.4,27.6,-14.1,29C-21.9,30.5,-31.4,27.1,-35.9,20.3C-40.3,13.5,-39.7,3.3,-36.6,-5.1C-33.5,-13.4,-27.9,-20,-21.3,-25.5C-14.8,-31.1,-7.4,-35.7,-2.1,-33.2C3.3,-30.7,6.6,-21.2,10.9,-15.3Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-right">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M23,-29.1C27.9,-23.3,28.7,-14.3,29.3,-5.9C30,2.6,30.6,10.3,28.4,18.6C26.2,26.9,21.3,35.9,13.4,40.3C5.5,44.6,-5.3,44.5,-13.2,40C-21.1,35.5,-26,26.7,-26.7,18.7C-27.4,10.8,-23.7,3.6,-20,-1.1C-16.3,-5.8,-12.5,-8.2,-9.2,-14.1C-5.9,-20.1,-2.9,-29.8,3.1,-33.5C9.1,-37.1,18.1,-34.8,23,-29.1Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-bottom">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M28.2,-31.7C35.7,-27.3,40.4,-17.6,40.4,-8.4C40.5,0.8,35.9,9.4,30.5,16.5C25.1,23.5,18.8,28.9,10.9,33.1C3,37.4,-6.4,40.5,-15.5,38.8C-24.5,37.1,-33.2,30.6,-34.6,22.6C-36,14.7,-30.2,5.2,-25.5,-1.6C-20.9,-8.4,-17.5,-12.6,-13.4,-17.5C-9.3,-22.4,-4.7,-28.2,2.8,-31.6C10.4,-34.9,20.7,-36,28.2,-31.7Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+            </div>
+            <div class="project-txt">
+              <h3 class="project-tit">케어몬</h3>
+              <p class="project-desc">차트 라이브러리를 활용하여 다양한 모양의 차트를 커스터마이징 했습니다. fixed를 활용하여 배경 이미지에 패럴랙스 효과를 적용하였습니다.
+                props값에 따라 클래스를 변경하여
+                header UI를 변경하는 간단한 작업도 진행하였습니다.</p>
+              <ul class="tech-list">
+                <li class="tech-item">React</li>
+                <li class="tech-item">Recharts</li>
+              </ul>
+            </div>
+          </li>
+          <li class="project-item">
+            <div class="project-img">
+              <img src="img/114_01.png" alt="">
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M19.7,-24.3C27.2,-21.7,36.1,-18.2,36.6,-12.8C37.2,-7.4,29.6,-0.1,25.9,7.6C22.2,15.3,22.6,23.4,18.9,25.2C15.3,27,7.6,22.5,0.8,21.3C-6,20.2,-11.9,22.4,-19,21.7C-26,21,-34.1,17.4,-38.5,10.9C-42.8,4.4,-43.4,-5,-40.1,-12.3C-36.7,-19.7,-29.5,-25.1,-22.1,-27.7C-14.8,-30.3,-7.4,-30.1,-0.6,-29.3C6.1,-28.4,12.3,-26.8,19.7,-24.3Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-right">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M16.9,-17.9C21.4,-12.4,24.2,-6.2,26.6,2.4C29,11,31.1,22.1,26.6,29.7C22.1,37.4,11,41.7,-0.1,41.8C-11.3,42,-22.6,37.9,-28.5,30.3C-34.5,22.6,-35,11.3,-34.5,0.6C-33.9,-10.2,-32.2,-20.3,-26.3,-25.9C-20.3,-31.4,-10.2,-32.4,-2,-30.4C6.2,-28.4,12.4,-23.5,16.9,-17.9Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-bottom">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M18.5,-17.9C25.2,-11.8,32.8,-5.9,33.3,0.5C33.7,6.8,27.1,13.7,20.4,19.2C13.7,24.7,6.8,28.9,-0.1,28.9C-6.9,29,-13.9,24.9,-20.7,19.4C-27.5,13.9,-34.3,6.9,-35.2,-0.9C-36.1,-8.8,-31.2,-17.5,-24.4,-23.7C-17.5,-29.8,-8.8,-33.3,-1.4,-31.8C5.9,-30.4,11.8,-24.1,18.5,-17.9Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+            </div>
+            <div class="project-txt">
+              <h3 class="project-tit">부동산114</h3>
+              <p class="project-desc">React Native 환경에서 화면작업한 프로젝트입니다. 컴토넌트가 다양한 페이지에서 유동적으로 사용될 수 있도록 중점을 두고 작업하였습니다.
+                달력화면의 경우 flex-grow를
+                활용하여 디바이스 크기가 달라지거나 주 수가 변동되더라도 달력 화면으로 채울 수 있도록 작업하였습니다.</p>
+              <ul class="tech-list">
+                <li class="tech-item">React Native</li>
+              </ul>
+            </div>
+          </li>
+          <li class="project-item">
+            <div class="project-img">
+              <img src="img/kami_01.jpg" alt="">
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M24.3,-35.9C29.1,-30,28.8,-19.7,29.5,-11.1C30.2,-2.6,31.8,4.1,29.9,9.6C28,15.1,22.5,19.3,17,23.6C11.4,27.8,5.7,32.1,-0.1,32.2C-5.8,32.3,-11.7,28.2,-19.2,24.6C-26.8,21,-36.1,17.9,-39.2,11.9C-42.2,6,-39,-2.8,-36.1,-11.7C-33.2,-20.6,-30.6,-29.5,-24.6,-35C-18.6,-40.5,-9.3,-42.6,0.2,-43C9.8,-43.3,19.6,-41.9,24.3,-35.9Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"
+                  style="transition: all 0.3s ease 0s;"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-right">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M13.1,-19.8C17.1,-12.3,20.5,-8.3,24,-2.2C27.5,3.9,31.2,12,29,17.8C26.9,23.6,19,27.1,11.3,29.2C3.5,31.3,-4.2,31.9,-9.9,29C-15.6,26.2,-19.4,19.8,-21,13.7C-22.7,7.6,-22.3,1.9,-23.6,-6.5C-24.9,-14.8,-27.8,-25.8,-24.2,-33.3C-20.5,-40.8,-10.3,-45,-2.8,-41.6C4.6,-38.2,9.2,-27.3,13.1,-19.8Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-bottom">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M26.9,-31.6C34.5,-25.6,40.2,-16.8,40.4,-8.2C40.5,0.4,35.2,8.8,29.8,16.4C24.4,23.9,19,30.6,12.1,33C5.2,35.3,-3.1,33.4,-12.2,31.1C-21.2,28.8,-30.9,26.1,-34.8,19.9C-38.7,13.6,-36.7,3.7,-33.2,-4.1C-29.7,-11.9,-24.6,-17.6,-18.8,-23.9C-13,-30.1,-6.5,-37,1.5,-38.9C9.6,-40.7,19.2,-37.5,26.9,-31.6Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+            </div>
+            <div class="project-txt">
+              <h3 class="project-tit">한전</h3>
+              <p class="project-desc">flex와 grid를 활용하되 IE10까지 레이아웃이 틀어지지 않도록 작업했습니다. 클라이언트 측에서 스크롤없이 한 화면에 모든 정보를 보길 원했기
+                때문에 flex 레이아웃을 적극적으로
+                활용하였습니다. 또한 대시보드 내 알림음을 적용하기 위해 소리가 없는 오디오 파일을 먼저 재생하여 알림음이 자동으로 재생되도록 구현하였습니다.</p>
+              <ul class="tech-list">
+                <li class="tech-item">Kendo UI</li>
+                <li class="tech-item">jQuery</li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <span class="cursor"></span>
 </body>
+
 </html>
