--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:url" content="https://owopqowo.github.io/">
+  <meta property="og:title" content="포트폴리오">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://owopqowo.github.io/img/share.jpg">
+  <meta property="og:description" content="경력 5년 UI 개발자 포트폴리오">
   <title>Portfolio</title>
   <link rel="stylesheet" href="css/default.css">
   <link rel="stylesheet" href="css/style.css">
