--- a/index.html
+++ b/index.html
@@ -144,6 +144,37 @@
         <ul class="project-list">
           <li class="project-item">
             <div class="project-img">
+              <img src="img/teuni_01.jpg" alt="">
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-right">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M18.5,-26.1C23.4,-21.9,26.4,-15.7,27.8,-9.5C29.2,-3.3,29,3,28.1,10.2C27.2,17.3,25.6,25.2,20.8,30.9C16,36.7,8,40.3,-0.5,40.9C-9,41.6,-18,39.4,-22.1,33.4C-26.2,27.5,-25.3,17.7,-28.3,9C-31.3,0.4,-38.3,-7.2,-38.8,-14.8C-39.3,-22.4,-33.3,-30,-25.8,-33.4C-18.2,-36.7,-9.1,-35.8,-1.2,-34.2C6.8,-32.6,13.6,-30.3,18.5,-26.1Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-bottom">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M13.1,-19.8C17.1,-12.3,20.5,-8.3,24,-2.2C27.5,3.9,31.2,12,29,17.8C26.9,23.6,19,27.1,11.3,29.2C3.5,31.3,-4.2,31.9,-9.9,29C-15.6,26.2,-19.4,19.8,-21,13.7C-22.7,7.6,-22.3,1.9,-23.6,-6.5C-24.9,-14.8,-27.8,-25.8,-24.2,-33.3C-20.5,-40.8,-10.3,-45,-2.8,-41.6C4.6,-38.2,9.2,-27.3,13.1,-19.8Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+              <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
+                <path fill="rgba(249, 232, 229, .4)"
+                  d="M28.2,-31.7C35.7,-27.3,40.4,-17.6,40.4,-8.4C40.5,0.8,35.9,9.4,30.5,16.5C25.1,23.5,18.8,28.9,10.9,33.1C3,37.4,-6.4,40.5,-15.5,38.8C-24.5,37.1,-33.2,30.6,-34.6,22.6C-36,14.7,-30.2,5.2,-25.5,-1.6C-20.9,-8.4,-17.5,-12.6,-13.4,-17.5C-9.3,-22.4,-4.7,-28.2,2.8,-31.6C10.4,-34.9,20.7,-36,28.2,-31.7Z"
+                  width="100%" height="100%" transform="translate(50 50)" stroke-width="0"></path>
+              </svg>
+            </div>
+            <div class="project-txt">
+              <h3 class="project-tit">트니트니 홍보페이지</h3>
+              <p class="project-desc">반응형 인터렉션 페이지를 작업하였습니다. 스크롤 인터렉션은 swiper js를 활용하였습니다. 각 섹션별 이미지에 css
+                animation을 이용하여 fade in, zoom in 등의 효과를 구현하였습니다. </p>
+              <ul class="tech-list">
+                <li class="tech-item">swiper js</li>
+              </ul>
+              <div class="btns">
+                <a href="https://teuni.teuni.com/" target="_blank" class="btn" rel="noopener noreferrer">Show More</a>
+              </div>
+            </div>
+          </li>
+          <li class="project-item">
+            <div class="project-img">
               <img src="img/alphapay_01.png" alt="">
               <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" class="svg-left">
                 <path fill="rgba(249, 232, 229, .4)"
@@ -170,6 +201,10 @@
                 <li class="tech-item">jQuery</li>
                 <li class="tech-item">jQuery ui</li>
               </ul>
+              <div class="btns">
+                <a href="https://m.kshop.co.kr/custord/mc/mypage/pay/auth/main" target="_blank" class="btn"
+                  rel="noopener noreferrer">Show More</a>
+              </div>
             </div>
           </li>
           <li class="project-item">
