--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li class="strength-item">
             <lottie-player src="json/1321-html-5-code-language-outline-edited.json" background="transparent">
             </lottie-player>
-            <p>웹표준, 웹접근성에 맞춰 작업하며 의미에 맞는 태그를 사용합니다. 또한 간결하고 모듈화된 코드를 지향합니다.</p>
+            <p>웹 표준, 웹 접근성에 맞춰 작업하며 의미에 맞는 태그를 사용합니다. 또한 간결하고 모듈화된 코드를 지향합니다.</p>
           </li>
           <li class="strength-item">
             <lottie-player src="json/981-consultation-outline-edited.json" background="transparent">
@@ -109,7 +109,7 @@
             <ul class="bullet-list">
               <li class="bullet-item">웹스퀘어를 활용한 학사 행정 시스템 화면 구축</li>
               <li class="bullet-item">유지 및 관리가 쉬운 코드 작성</li>
-              <li class="bullet-item">협업 및 클라이언트측 인수인계를 위한 퍼블리싱 가이드 문서 작성</li>
+              <li class="bullet-item">협업 및 클라이언트 측 인수인계를 위한 퍼블리싱 가이드 문서 작성</li>
               <li class="bullet-item">클라이언트에는 서울대, 유한대 등 포함</li>
             </ul>
           </div>
@@ -118,7 +118,7 @@
             </h3>
             <ul class="bullet-list">
               <li class="bullet-item">그누보드, 워드프레스를 사용하여 기업페이지 구축</li>
-              <li class="bullet-item">패럴랙스, animation.css를 활용한 스크롤 인터렉션 적용</li>
+              <li class="bullet-item">animation.css를 활용한 스크롤 인터렉션 적용</li>
               <li class="bullet-item">다양한 슬라이드 라이브러리를 활용하여 커스터마이징 작업</li>
               <li class="bullet-item">클라이언트에는 브리오슈도레, 동양 EMS, 켈란, 닛코괌, 더 츠바키 타워, 다원교육 등 포함</li>
             </ul>
@@ -128,7 +128,7 @@
             <ul class="bullet-list">
               <li class="bullet-item">HTML, CSS, Less, JavaScript, jQuery를 주로 사용하는 클라이언트 웹사이트 화면 개발 및 유지 보수</li>
               <li class="bullet-item">브라우저 간 호환성을 위해 다양한 브라우저 및 모바일 장치에서 테스트</li>
-              <li class="bullet-item">숨은그림 찾기, 퍼즐 맞추기 등의 간단한 게임 구현</li>
+              <li class="bullet-item">숨은 그림 찾기, 퍼즐 맞추기 등의 간단한 게임 구현</li>
               <li class="bullet-item">프로모션 디자인에 맞춰 인터렉션 구현</li>
               <li class="bullet-item">클라이언트에는 서울우유, 에어부산, 에어서울, 사조그룹, 코트야드 메리어트 등 포함</li>
             </ul>
@@ -164,12 +164,12 @@
             <div class="project-txt">
               <h3 class="project-tit">트니트니 홍보페이지</h3>
               <p class="project-desc">반응형 인터렉션 페이지를 작업하였습니다. 스크롤 인터렉션은 swiper js를 활용하였습니다. 각 섹션별 이미지에 css
-                animation을 이용하여 fade in, zoom in 등의 효과를 구현하였습니다. </p>
+                animation을 이용하여 fade in, zoom in 등의 효과를 구현하였습니다.</p>
               <ul class="tech-list">
                 <li class="tech-item">swiper js</li>
               </ul>
               <div class="btns">
-                <a href="https://teuni.teuni.com/" target="_blank" class="btn" rel="noopener noreferrer">Show More</a>
+                <a href="https://teuni.com/" target="_blank" class="btn" rel="noopener noreferrer">페이지 바로가기</a>
               </div>
             </div>
           </li>
@@ -194,16 +194,15 @@
             </div>
             <div class="project-txt">
               <h3 class="project-tit">알파페이</h3>
-              <p class="project-desc">자체페이 시스템 도입을 위해 화면작업을 했습니다. KT알파쇼핑, 이니시스측과 협업하며 작업을 진행했습니다. 입력폼 요소는 flex 레이아웃을
-                적용하여 유동적으로 활용할 수 있도록
-                하였습니다. 퀵결제 시스템의 경우 마우스 드래그 및 터치 인터렉션을 구현하였습니다.</p>
+              <p class="project-desc">자체 페이 시스템 도입을 위해 화면 작업을 했습니다. KT알파 쇼핑, 이니시스 측과 협업하며 작업을 진행했습니다. 입력폼 요소는 flex 레이아웃을
+                적용하여 유동적으로 활용할 수 있도록 하였습니다. 퀵결제 시스템의 경우 마우스 드래그 및 터치 인터렉션을 구현하였습니다.</p>
               <ul class="tech-list">
                 <li class="tech-item">jQuery</li>
                 <li class="tech-item">jQuery ui</li>
               </ul>
               <div class="btns">
-                <a href="https://m.kshop.co.kr/custord/mc/mypage/pay/auth/main" target="_blank" class="btn"
-                  rel="noopener noreferrer">Show More</a>
+                <a href="https://rainbow-tamarillo-d68.notion.site/1eda3a4c311b4ce88ae17093d2a13ad2" target="_blank" class="btn" rel="noopener noreferrer">작업 내용보기</a>
+                <a href="https://m.kshop.co.kr/" target="_blank" class="btn" rel="noopener noreferrer">페이지 바로가기</a>
               </div>
             </div>
           </li>
@@ -228,13 +227,15 @@
             </div>
             <div class="project-txt">
               <h3 class="project-tit">케어몬</h3>
-              <p class="project-desc">차트 라이브러리를 활용하여 다양한 모양의 차트를 커스터마이징 했습니다. fixed를 활용하여 배경 이미지에 패럴랙스 효과를 적용하였습니다.
-                props값에 따라 클래스를 변경하여
-                header UI를 변경하는 간단한 작업도 진행하였습니다.</p>
+              <p class="project-desc">React 환경에서 통계, 챌린지, 분석 등의 웹뷰 페이지를 퍼블리싱하는 작업을 진행하였습니다. 차트 라이브러리를 활용하여 다양한 모양의 차트를 커스터마이징 했습니다. props 값에 따라 클래스를 변경하여 header style을 변경하는 간단한 작업도 진행하였습니다.</p>
               <ul class="tech-list">
                 <li class="tech-item">React</li>
                 <li class="tech-item">Recharts</li>
               </ul>
+              <div class="btns">
+                <a href="https://apppage.net/r?to=https://play.google.com/store/apps/details?id%3Dcom.kt.healthmydata%26hl%3Den%26gl%3Dkr" target="_blank" class="btn" rel="noopener noreferrer">앱 다운로드하기</a>
+                <a href="https://www.shinailbo.co.kr/news/articleView.html?idxno=1459890" target="_blank" class="btn" rel="noopener noreferrer">관련 기사보기</a>
+              </div>
             </div>
           </li>
           <li class="project-item">
@@ -258,12 +259,15 @@
             </div>
             <div class="project-txt">
               <h3 class="project-tit">부동산114</h3>
-              <p class="project-desc">React Native 환경에서 화면작업한 프로젝트입니다. 컴토넌트가 다양한 페이지에서 유동적으로 사용될 수 있도록 중점을 두고 작업하였습니다.
-                달력화면의 경우 flex-grow를
-                활용하여 디바이스 크기가 달라지거나 주 수가 변동되더라도 달력 화면으로 채울 수 있도록 작업하였습니다.</p>
+              <p class="project-desc">React Native 환경에서 화면 작업한 프로젝트입니다. 컴포넌트가 다양한 페이지에서 유동적으로 사용될 수 있도록 중점을 두고 작업하였습니다.
+                달력 화면의 경우 Dimensions API 활용하여 디바이스 크기가 달라지더라도 스케줄이 표시되도록 하였습니다.</p>
               <ul class="tech-list">
                 <li class="tech-item">React Native</li>
               </ul>
+              <div class="btns">
+                <a href="https://rainbow-tamarillo-d68.notion.site/114-fb3d633e90484cb080ded38319005912" target="_blank" class="btn" rel="noopener noreferrer">작업 내용보기</a>
+                <a href="https://url.kr/tx9vzq" target="_blank" class="btn" rel="noopener noreferrer">앱 다운로드하기</a>
+              </div>
             </div>
           </li>
           <li class="project-item">
@@ -288,13 +292,15 @@
             </div>
             <div class="project-txt">
               <h3 class="project-tit">한전</h3>
-              <p class="project-desc">flex와 grid를 활용하되 IE10까지 레이아웃이 틀어지지 않도록 작업했습니다. 클라이언트 측에서 스크롤없이 한 화면에 모든 정보를 보길 원했기
-                때문에 flex 레이아웃을 적극적으로
-                활용하였습니다. 또한 대시보드 내 알림음을 적용하기 위해 소리가 없는 오디오 파일을 먼저 재생하여 알림음이 자동으로 재생되도록 구현하였습니다.</p>
+              <p class="project-desc">flex와 grid를 활용하되 IE10까지 레이아웃이 틀어지지 않도록 작업했습니다. 클라이언트 측에서 스크롤 없이 한 화면에 모든 정보를 보길 원했기
+                때문에 flex 레이아웃을 적극적으로 활용하였습니다. 또한 대시보드 내 알림음을 적용하기 위해 소리가 없는 오디오 파일을 먼저 재생하여 알림음이 자동으로 재생되도록 구현하였습니다.</p>
               <ul class="tech-list">
                 <li class="tech-item">Kendo UI</li>
                 <li class="tech-item">jQuery</li>
               </ul>
+              <div class="btns">
+                <a href="https://rainbow-tamarillo-d68.notion.site/9ee0f148678a4aa3be2af9d32b270232" target="_blank" class="btn" rel="noopener noreferrer">작업 내용보기</a>
+              </div>
             </div>
           </li>
         </ul>
